que2/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scribetech-python-svc
spec:
  selector:
    app: scribetech-python
  ports:
    - name: py-svc-port
      port: 80
      targetPort: py-port
