que2/manifests/canary-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: scribetech-ingress-canary
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "30"
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: scribetech-python-svc
              servicePort: py-svc-port
